[package]
name = "prost-stream"
version = "0.1.2"
edition = "2021"
authors = ["hangj <guijie.han@gmail.com>"]
readme = "README.md"
description = "prost stream"
keywords = ["prost", "prost-stream", "async-prost"]
license = "MIT"
repository = "https://github.com/hangj/prost-stream"
documentation = "https://docs.rs/prost-stream/"
exclude = ["/.github/*", "/.gitattributes", "/appveyor.yml", "/Changelog.md", "/clippy.toml", "/codecov.yml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
async = ["dep:tokio"]

[dependencies]
prost = "0.13.4"
thiserror = "2.0.11"
tokio = {version = "1.43.0", features = ["io-util"], optional = true}

[dev-dependencies]
tokio = {version = "1.43.0", features = ["full"]}
anyhow = "1.0.95"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--cfg",
    "docsrs",
]
