[package]
name = "prost-stream"
version = "0.1.3"
edition = "2021"
authors = ["hangj <guijie.han@gmail.com>"]
readme = "README.md"
description = "prost stream"
keywords = ["prost", "prost-stream", "async-prost"]
license = "MIT"
repository = "https://github.com/hangj/prost-stream"
documentation = "https://docs.rs/prost-stream/"
exclude = ["/.github/*", "/.gitattributes", "/appveyor.yml", "/Changelog.md", "/clippy.toml", "/codecov.yml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
async = ["dep:tokio"]

[dependencies]
prost = "0.13.5"
thiserror = "2.0.12"
tokio = {version = "1.45.0", features = ["io-util"], optional = true}

[dev-dependencies]
tokio = {version = "1.45.0", features = ["full"]}
anyhow = "1.0.98"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--cfg",
    "docsrs",
]
